# HelloClapHost

./: CMakeLists.txt  README.md  clap-saw-demo-imgui.clap
libs/: jsoncpp.lib
other_examples/HelloClapHostWC/HelloClapHostWC/: HelloClapHostWC.cpp  HelloClapHostWC.vcxproj  HelloClapHostWC.vcxproj.filters
other_examples/HelloClapHostWC/HelloClapHostWC/x64/Debug/: HelloClapHostWC.exe.recipe  HelloClapHostWC.ilk  vc143.idb
other_examples/HelloClapHostWC/HelloClapHostWC/x64/Debug/HelloClapHostWC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  HelloClapHostWC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
other_examples/WindowsAppVC/WindowsAppTest1/: CMakelists.txt  SimplestWindowsDesktop.cpp
other_examples/miniaudio_example/: CMakelists.txt
other_examples/miniaudio_example/新しいフォルダー/: HelloClapHostWC.sln
other_examples/miniaudio_example/新しいフォルダー/HelloClapHostWC/: HelloClapHostWC.cpp
other_examples/miniaudio_example/新しいフォルダー/HelloClapHostWC/x64/Debug/: HelloClapHostWC.exe.recipe  vc143.idb
other_examples/miniaudio_example/新しいフォルダー/HelloClapHostWC/x64/Debug/HelloClapHostWC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  HelloClapHostWC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
other_examples/simple_miniaudio_example/: CMakelists.txt
other_examples/simple_miniaudio_example/src/: main.cpp
other_examples/src_detail/: main.cpp  main.hpp
src/: main.cpp  main.hpp
